--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </div>
           <div class="attribution" id="info">
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-            Coded by <a href="#">Your Name Here</a>.
+            Coded by <a href="https://www.frontendmentor.io/profile/Gems-coder">Your Name Here</a>.
           </div>
         </div>
     </main>
