--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
             <div class="col-md-4">
               <div class="card mx-auto p-3  rounded-3 text-align-start" id="bg" >
                 <div class="active rounded-3">
-                    <img src="./nft-preview-card-component-main/images/image-equilibrium.jpg" class="rounded-3" loading="lazy" id="image1" alt="clear crystal on dark blue bg">
-                    <div class="image2"><img src="./nft-preview-card-component-main/images/icon-view.svg" id="view"></div>
+                    <img src="./nft-preview-card-component-main/images/image-equilibrium.jpg" class="rounded-3"  id="image1" alt="clear crystal on dark blue bg">
+                    <div class="image2"><img src="./nft-preview-card-component-main/images/icon-view.svg" alt="view icon" id="view"></div>
                 </div>
                 <div class="card-body">
-                  <h4 class="card-title py-3 " id="on-hover">Equilibrium #3429</h4>
+                  <h2 class="card-title py-3 " id="on-hover">Equilibrium #3429</h2>
                   <p class="card-text fw-3 fs-5">Our Equilibrium collection promotes balance and calm.</p>
                   <div class="flex1 py-3">
-                      <h5 id="on-hover2"><img src="./nft-preview-card-component-main/images/icon-ethereum.svg" class="p-2"> 0.041 ETH</h5>
-                      <h5><img src="./nft-preview-card-component-main/images/icon-clock.svg" class="p-2">3 days left</h5>
+                      <h5 id="on-hover2"><img src="./nft-preview-card-component-main/images/icon-ethereum.svg" alt="icon-ethereum" class="p-2"> 0.041 ETH</h5>
+                      <h5><img src="./nft-preview-card-component-main/images/icon-clock.svg" alt="icon-clock" class="p-2">3 days left</h5>
                   </div>
                   <hr>
                   <div class="avatar-div">
-                    <img src="./nft-preview-card-component-main/images/image-avatar.png" id="avatar" alt="">
+                    <img src="./nft-preview-card-component-main/images/image-avatar.png" id="avatar" alt="boy-face">
                     <p>Creation of <span  id="span1">Jules Wyvern</span></p>
                   </div>
                 </div>
