--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                   <h2 class="card-title py-3 " id="on-hover">Equilibrium #3429</h2>
                   <p class="card-text fw-3 fs-5">Our Equilibrium collection promotes balance and calm.</p>
                   <div class="flex1 py-3">
-                      <h5 id="on-hover2"><img src="./nft-preview-card-component-main/images/icon-ethereum.svg" alt="icon-ethereum" class="p-2"> 0.041 ETH</h5>
-                      <h5><img src="./nft-preview-card-component-main/images/icon-clock.svg" alt="icon-clock" class="p-2">3 days left</h5>
+                      <p id="on-hover2"><img src="./nft-preview-card-component-main/images/icon-ethereum.svg" alt="icon-ethereum" class="p-2"> 0.041 ETH</p>
+                      <p class="p"><img src="./nft-preview-card-component-main/images/icon-clock.svg" alt="icon-clock" class="p-2">3 days left</p>
                   </div>
                   <hr>
                   <div class="avatar-div">
